--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux": "^4.0.5",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
+    "uuid": "^8.3.0",
     "validator": "8.0.0",
     "webpack": "3.1.0",
     "webpack-dev-server": "2.5.1"
