--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,8 @@
 // json file that allos us to pass all the args in the command line and place them here
 {
   "presets": ["env", "react"],
-  "plugins": ["transform-class-properties"]
+  "plugins": [
+    "transform-class-properties",
+    "babel-plugin-transform-object-rest-spread"
+  ]
 }
